--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,52 @@
-allure-pytest==2.13.2
-allure-python-commons==2.13.2
-appnope==0.1.3
-async-generator==1.10
-attrs==23.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-behave==1.2.6
-certifi>=2023.7.22
-cffi==1.16.0
+pip>=23.3.2
+packaging>=23.2
+setuptools>=69.0.3;python_version>="3.8"
+wheel>=0.42.0
+attrs>=23.2.0
+certifi>=2023.11.17
+filelock>=3.13.1;python_version>="3.8"
+platformdirs>=4.1.0;python_version>="3.8"
+parse>=1.20.0
+parse-type>=0.6.2
+pyyaml>=6.0.1
+six==1.16.0
+idna==3.6
 chardet==5.2.0
 charset-normalizer==3.3.2
-colorama==0.4.6
-commonmark==0.9.1
-cryptography==41.0.7
-cssselect==1.2.0
-decorator==5.1.1
-exceptiongroup==1.2.0
-execnet>=1.9.0
-fasteners==0.19
-filelock==3.13.1
-h11==0.14.0
-idna==3.6
-importlib-metadata==7.0.1
-iniconfig==2.0.0
-ipdb==0.13.13
-ipython==8.20.0
-jaraco.classes==3.3.0
-jedi==0.19.1
-keyring==24.3.0
-markdown-it-py==3.0.0
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-more-itertools==10.2.0
-nose==1.3.7
-outcome==1.3.0.post0
-packaging==23.2
-parameterized==0.9.0
-parse>=1.19.1
-parse-type>=0.6.0
-parso==0.8.3
-pdbp==1.5.0
-pexpect==4.9.0
-pickleshare==0.7.5
-platformdirs==4.1.0
-pluggy==1.3.0
-prompt-toolkit==3.0.43
-ptyprocess==0.7.0
-py==1.11.0
-pycparser==2.21
-Pygments==2.17.2
-PyMySQL==1.1.0
+urllib3>=1.26.18,<2.2.0;python_version>="3.10"
+requests==2.31.0
 pynose==1.4.8
-pyOpenSSL==23.3.0
-pyotp==2.9.0
-pyparsing==3.1.1
-PySocks==1.7.1
+sniffio==1.3.0
+h11==0.14.0
+outcome==1.3.0.post0
+trio==0.23.2;python_version>="3.8"
+trio-websocket==0.11.1
+wsproto==1.2.0
+selenium==4.16.0;python_version>="3.8"
+cssselect==1.2.0
+sortedcontainers==2.4.0
+fasteners==0.19
+execnet==2.0.2
+iniconfig==2.0.0
+pluggy==1.3.0;python_version>="3.8"
+py==1.11.0
 pytest==7.4.4
-pytest-forked==1.6.0
 pytest-html==2.0.1
 pytest-metadata==3.0.0
 pytest-ordering==0.6
 pytest-rerunfailures==13.0
 pytest-xdist==3.5.0
-PyYAML==6.0.1
-requests~=2.31.0
-requests-toolbelt==1.0.0
-rich==13.7.0
+parameterized==0.9.0
 sbvirtualdisplay==1.3.0
-selenium==4.16.0
-seleniumbase==4.22.5
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-tabcompleter>=1.2.0
-toml==0.10.2
-tomli==2.0.1
-tqdm==4.66.1
-traitlets==5.14.1
-trio==0.24.0
-trio-websocket>=0.10.2
-urllib3==2.1.0
-urllib3-secure-extra==0.1.0
-wcwidth==0.2.13
-websockets==12.0
-wsproto==1.2.0
-zipp==3.17.0
-pytest-pspec== 0.0.4
-
-lxml~=5.1.0
-setuptools==69.0.3
+behave==1.2.6
+soupsieve==2.5;python_version>="3.8"
+beautifulsoup4==4.12.2
+pygments==2.17.2
+tabcompleter==1.3.0
+pdbp==1.5.0
+colorama==0.4.6
+exceptiongroup==1.2.0
+pyotp==2.9.0
+markdown-it-py==3.0.0;python_version>="3.8"
+mdurl==0.1.2
+rich==13.7.0
