--- a/requirements.txt
+++ b/requirements.txt
@@ -12,42 +12,42 @@ parse>=1.20.0
 parse-type>=0.6.2
 pyyaml>=6.0.1
 six==1.16.0
-idna==3.6
+idna>=2.5,<4
 chardet==5.2.0
-charset-normalizer==3.3.2
+charset-normalizer<4, >=2
 urllib3>=1.26.18,<2.2.0;python_version>="3.10"
 requests~=2.32.3
-pynose==1.4.8
-sniffio==1.3.0
+pynose>=1.5.3
+sniffio>=1.3.0
 h11==0.14.0
 outcome==1.3.0.post0
-trio==0.23.2;python_version>="3.8"
+trio>=0.23.2;python_version>="3.8"
 trio-websocket==0.11.1
 wsproto==1.2.0
-selenium==4.16.0;python_version>="3.8"
+selenium>=4.16.0;python_version>="3.8"
 cssselect==1.2.0
 sortedcontainers==2.4.0
 fasteners==0.19
-execnet==2.0.2
+execnet>=2.1
 iniconfig==2.0.0
-pluggy==1.3.0;python_version>="3.8"
+pluggy>=1.5,<2;python_version>="3.8"
 py==1.11.0
 pytest~=8.3.3
 pytest-html==2.0.1
-pytest-metadata==3.0.0
+pytest-metadata>=3.0.0
 pytest-ordering==0.6
-pytest-rerunfailures==13.0
-pytest-xdist==3.5.0
+pytest-rerunfailures>=13.0
+pytest-xdist>=3.5,<4
 parameterized==0.9.0
 sbvirtualdisplay==1.3.0
 behave==1.2.6
-soupsieve==2.5;python_version>="3.8"
-beautifulsoup4==4.12.2
-pygments==2.17.2
-tabcompleter==1.3.0
-pdbp==1.5.0
+soupsieve>=1.2;python_version>="3.8"
+beautifulsoup4>=4.12.2
+pygments>=2.16.1
+tabcompleter>=1.3.0
+pdbp>=1.6.1
 colorama==0.4.6
-exceptiongroup==1.2.0
+exceptiongroup>=1.2.2
 pyotp==2.9.0
 markdown-it-py==3.0.0;python_version>="3.8"
 mdurl==0.1.2
