--- a/examples/nypl_tests/requirements.txt
+++ b/examples/nypl_tests/requirements.txt
@@ -1,87 +1,58 @@
-allure-pytest==2.13.1
-allure-python-commons==2.13.1
-appnope==0.1.3
-asttokens==2.2.1
-async-generator==1.10
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-behave==1.2.6
-certifi>=2023.7.22
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.2.0
-colorama==0.4.6
-commonmark==0.9.1
-cssselect==1.2.0
-decorator==5.1.1
-exceptiongroup==1.1.2
-execnet==2.0.2
-executing==1.2.0
-fasteners==0.18
-filelock==3.12.2
-h11==0.14.0
-idna==3.4
-importlib-metadata==6.0.0
-iniconfig==2.0.0
-ipdb==0.13.9
-ipython==7.34.0
-jaraco.classes==3.2.3
-jedi==0.18.1
-keyring==23.13.1
-markdown-it-py==3.0.0
-matplotlib-inline==0.1.3
-mdurl==0.1.2
-more-itertools==10.0.0
-nose==1.3.7
-outcome==1.2.0
-packaging==23.1
-parameterized==0.9.0
-parse>=1.19.1
+# this is the main requirements file
+# https://github.com/seleniumbase/SeleniumBase/blob/master/requirements.txt
+pip>=23.3.2
+packaging>=23.2
+setuptools>=69.0.3;python_version>="3.8"
+wheel>=0.42.0
+attrs>=23.2.0
+certifi>=2023.11.17
+filelock>=3.13.1;python_version>="3.8"
+platformdirs>=4.1.0;python_version>="3.8"
+parse>=1.20.0
 parse-type>=0.6.2
-parso==0.8.3
-pdbp==1.4.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.10.0
-pluggy==1.2.0
-prompt-toolkit==3.0.30
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pycparser==2.21
-Pygments==2.15.1
-PyMySQL==1.0.2
-pynose==1.4.7
-pyotp==2.9.0
-pyparsing==3.0.9
-PySocks==1.7.1
-pytest==7.4.0
-pytest-forked==1.6.0
-pytest-html==2.0.1
-pytest-metadata==3.0.0
-pytest-ordering==0.6
-pytest-rerunfailures==12.0
-pytest-xdist==3.3.1
-PyYAML==6.0
-requests==2.31.0
-rich==13.5.2
-sbvirtualdisplay==1.2.0
-selenium==4.11.2
-seleniumbase==4.17.1
+pyyaml>=6.0.1
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-stack-data==0.6.2
-tabcompleter==1.2.1
-toml==0.10.2
-tomli==2.0.1
-traitlets==5.9.0
-trio==0.22.2
-trio-websocket==0.10.3
-urllib3==2.0.4
-urllib3-secure-extra==0.1.0
-wcwidth==0.2.5
+idna>=2.5,<4
+chardet==5.2.0
+charset-normalizer<4, >=2
+urllib3>=1.26.18,<2.2.0;python_version>="3.10"
+requests~=2.32.3
+pynose>=1.5.3
+sniffio>=1.3.0
+h11==0.14.0
+outcome==1.3.0.post0
+trio>=0.23.2;python_version>="3.8"
+trio-websocket==0.11.1
 wsproto==1.2.0
-zipp==3.15.0
+selenium>=4.16.0;python_version>="3.8"
+cssselect==1.2.0
+sortedcontainers==2.4.0
+fasteners==0.19
+execnet>=2.1
+iniconfig==2.0.0
+pluggy>=1.5,<2;python_version>="3.8"
+py==1.11.0
+pytest~=8.3.3
+pytest-html==2.0.1
+pytest-metadata>=3.0.0
+pytest-ordering==0.6
+pytest-rerunfailures>=13.0
+pytest-xdist>=3.5,<4
+parameterized==0.9.0
+sbvirtualdisplay==1.3.0
+behave==1.2.6
+soupsieve>=1.2;python_version>="3.8"
+beautifulsoup4>=4.12.2
+pygments>=2.16.1
+tabcompleter>=1.3.0
+pdbp>=1.6.1
+colorama==0.4.6
+exceptiongroup>=1.2.2
+pyotp==2.9.0
+markdown-it-py==3.0.0;python_version>="3.8"
+mdurl==0.1.2
+rich~=13.9.4
+pytest-pspec== 0.0.4
+
+seleniumbase~=4.32.12
+python-dotenv~=1.0.1
